// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Local 1`] = `
<section
  class="s-oO6dIPzQcPRb"
  data-testid="player-avatar"
>
  <figure
    class="s-engCJu8q-fNe colored"
    style="--dimension: 150px; --color: red; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
  >
    <img
      alt="avatar for Joe le clodo"
      class="s-engCJu8q-fNe hasImage"
      height="150"
      referrerpolicy="no-referrer"
      src="/tests/fixtures/avatar.png"
      width="150"
    />
     
  </figure>
  <!--&lt;PlayerThumbnail&gt;-->
   
  <span
    class="host s-oO6dIPzQcPRb"
  >
    host
  </span>
   
  <legend
    class="s-oO6dIPzQcPRb"
  >
     
    
  </legend>
</section>
`;

exports[`No video 1`] = `
<section
  class="s-oO6dIPzQcPRb"
  data-testid="player-avatar"
>
  <figure
    class="s-engCJu8q-fNe colored"
    style="--dimension: 150px; --color: red; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
  >
    <img
      alt="avatar for Joe le clodo"
      class="s-engCJu8q-fNe hasImage"
      height="150"
      referrerpolicy="no-referrer"
      src="/tests/fixtures/avatar.png"
      width="150"
    />
     
  </figure>
  <!--&lt;PlayerThumbnail&gt;-->
   
  <span
    class="host s-oO6dIPzQcPRb"
  >
    host
  </span>
   
  <legend
    class="s-oO6dIPzQcPRb"
  />
</section>
`;

exports[`No video nor avatar 1`] = `
<section
  class="s-oO6dIPzQcPRb"
  data-testid="player-avatar"
>
  <figure
    class="s-engCJu8q-fNe"
    style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
  >
    <img
      alt="avatar for Joe le clodo"
      class="s-engCJu8q-fNe"
      height="150"
      referrerpolicy="no-referrer"
      width="150"
    />
     
    <figcaption
      class="s-engCJu8q-fNe"
    >
      Joe le clodo
    </figcaption>
  </figure>
  <!--&lt;PlayerThumbnail&gt;-->
   
  <span
    class="host s-oO6dIPzQcPRb"
  >
    host
  </span>
   
  <legend
    class="s-oO6dIPzQcPRb"
  />
</section>
`;
